# bibliotheksprojekt_gruppe_5_statistik_auswertung_und_big_data_reflexion

./: .gitignore  CONTEXT.md  Datenschutzüberlegungen.md  KI-Protokoll.md  README.md  Thumbs.db  bibliothek.db  bibliothek.py  build-showcase.ps1  database.py  gui.py  katalogansicht.py  main.py  models.py  pyproject.toml  server_main.py  showcase_main.py  test_bibliothek.py  test_domain_values.py  test_katalogansicht.py
books_screenshots/: Thumbs.db
db_backups/: bibliothek.db.backup_20260603_095718  bibliothek.db.backup_before_adding_more_books_20260610  bibliothek.db.backup_before_book_metadata_20260609  bibliothek.db.backup_before_page_counts_20260609
sql_scripts/: create_database.sql
src/: __init__.py
src/desktop/: __init__.py  __main__.py  gui.py  http_adapter.py  main.py
src/server/: __init__.py  __main__.py  backend.py  bestand.py  buchlebenszyklus.py  http_adapter.py  katalogansicht.py  main.py  models.py
src/server/sql_scripts/: create_database.sql
src/shared/: __init__.py  catalog.py  domain_values.py  http_models.py  models.py
tests/: __init__.py  test_architecture.py  test_showcase.py
tests/desktop/: __init__.py  test_gui_charts.py
tests/integration/: __init__.py  test_http_transport.py
tests/server/: __init__.py  test_katalogansicht.py  test_server_modules.py
tests/shared/: __init__.py  test_domain_values.py
