[project]
name = "bibliotheksprojekt-gruppe-5-statistik-auswertung-und-big-data-reflexion"
version = "0.1.0"
description = "Client-Server-Anwendung zur Verwaltung eines Bibliotheksbestands"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "SIM", "UP"]
